fix: allow using border inside without "stretch" aligned

--- a/core/src/border/border.module.scss
+++ b/core/src/border/border.module.scss
@@ -5,6 +5,7 @@
 	border-top-width: 1px;
 	border-left-style: solid;
 	border-left-width: 1px;
+	align-self: stretch;
 }
 
 .weak {
